--- a/js/angular/app/components/home/homeView.html
+++ b/js/angular/app/components/home/homeView.html
@@ -1,5 +1,5 @@
 <div ng-controller="HomeController as vm">
     <p>Welcome to the Home of this Angular JS example.</p>
 
-    <button class="btn btn-defaul" ng-click="vm.openDialog()">Click on me</button>
+    <button class="btn btn-defaul" ng-click="vm.openDialog()">Open Dialog</button>
 </div>
