Add another page to demonstrate routing

--- a/js/angular/app/components/home/homeView.html
+++ b/js/angular/app/components/home/homeView.html
@@ -1,5 +1,6 @@
 <div ng-controller="HomeController as vm">
     <p>Welcome to the home of this Angular JS example.</p>
 
-    <button class="btn btn-defaul" ng-click="vm.openDialog()">Open Dialog</button>
+    <a href="/#/example" class="btn btn-default">Open another page</a>
+    <button class="btn btn-default" ng-click="vm.openDialog()">Open Dialog</button>
 </div>
